Migrate cleaned up Privacy Policy.

--- a/src/pages/privacy-policy.astro
+++ b/src/pages/privacy-policy.astro
@@ -1,7 +1,402 @@
 ---
+import Heading from "../components/Heading.astro"
+import PostBody from "../components/PostBody.astro"
 import Layout from "../layouts/Layout.astro"
+
+const title = "DDEV Website Privacy Statement"
 ---
 
-<Layout>
-  <main></main>
+<Layout title={title}>
+  <main class="max-w-4xl mx-auto mb-24">
+    <PostBody>
+      <Heading title={`Fruition Privacy Policy`} />
+      <div class="prose">
+        <p>
+          Fruition Growth LLC and our affiliated entities (collectively, “DDEV,”
+          “Fruition,” “we,” “us,” or “our”) respect your privacy. We are
+          publishing this version of the Fruition Privacy Policy (the "Policy")
+          to disclose our data privacy and protection practices.
+        </p>
+        <p>
+          This Policy describes how we collect, use, transfer, and safeguard
+          information about you and your options regarding accessing or
+          modifying such information. You accept and agree to this Policy when
+          you visit a website on which this Policy is posted, create an account
+          with Drud, request marketing information, or interact with
+          Drud&rsquo;s online and off-line products and services (collectively,
+          our "Services").
+        </p>
+        <p>
+          Throughout this Policy we use the terms “personal information” and
+          “PII” to describe information that can be associated with a specific
+          natural person and can be used to identify that person. We do not
+          consider personal information or PII to include information that has
+          been anonymized or aggregated so that it does not identify a specific
+          natural person. If you give us PII on behalf of someone else (or
+          someone else gives us PII on your behalf), the person providing the
+          PII must have consent to do so from the person whose information is
+          being provided to us.
+        </p>
+        <p>
+          If you have any questions about this Policy, please contact us by
+          email: <a href="mailto:privacy@fruition.net">privacy@fruition.net</a> or
+          via mail at:
+        </p>
+        <p>
+          Privacy Officer <br />Fruition Growth LLC<br />616 E Speer<br />Denver
+          CO 80203
+        </p>
+        <h2><strong>How We Collect Information</strong></h2>
+        <p>
+          We may collect information from you, or someone acting on your behalf,
+          when you interact with the Services. For example, you provide
+          information to us when you:
+        </p>
+        <ul>
+          <li>create accounts for Services,</li>
+          <li>click on our advertising,</li>
+          <li>elect to receive offers or other marketing communications,</li>
+          <li>request a coupon or other products,</li>
+          <li>receive customer support,</li>
+          <li>purchase, download, or register to use products, or</li>
+          <li>apply for a job.</li>
+        </ul>
+        <p>
+          In addition, we may collect information through use of cookies or
+          anonymous identifiers on our Services. For example, we collect data
+          through use technologies such as:
+        </p>
+        <ul>
+          <li>Cookies and pixel tags,</li>
+          <li>
+            Location detection technology, such as GPS signals sent by a mobile
+            device and IP addresses linked to a specific geographic location,
+          </li>
+          <li>HTTP headers,</li>
+          <li>Unique Application Identifiers,</li>
+          <li>Device identifiers,</li>
+          <li>Activity log files, and</li>
+          <li>
+            Local storage, such as browser web storage (including HTML 5) and
+            application data caches.
+          </li>
+        </ul>
+        <p>
+          When you use our Services, we place a text file called a ‘cookie’ in
+          the browser directory of your computer’s hard drive. A cookie is a
+          small piece of information that a website can store on your web
+          browser and later retrieve. The cookie cannot be read by any website
+          other than the one that set up the cookies. Some browsers can be set
+          to reject all cookies. If you choose to modify your browser in this
+          manner, some parts of the Services may not function properly.
+        </p>
+        <p>
+          We sometimes obtain personal information from other sources, such as
+          through mergers and acquisitions with other companies as well as
+          through commercial arrangements with data brokers, business partners,
+          and other sources. For example, a third party may provide us with your
+          age, gender, or zip code. Information we receive from a third party is
+          subject to your agreement with such third party. We may merge
+          information we receive from third parties with information we have
+          collected or will collect.
+        </p>
+        <p>
+          Some elements of the Services such as events, websites, and offers may
+          be co-branded and offered in conjunction with another company. If you
+          provide information in these cases, both Drud and each company
+          involved in the transaction may receive the information collected in
+          connection with that transaction and thereafter may use the
+          information according to each company’s privacy policy and any other
+          agreement each company may have with you.
+        </p>
+        <h2><strong>Information We Collect</strong></h2>
+        <h4><strong>Information provided to us directly</strong></h4>
+        <p>
+          You, or others acting on your behalf, may provide us with the
+          following information:
+        </p>
+        <ul>
+          <li>
+            your name, age, gender, physical address, email address, and phone
+            number,
+          </li>
+          <li>
+            the products and services you purchase, download or register to use,
+          </li>
+          <li>
+            payment information such as credit card number, security codes,
+            currency requirements, financial institution account number, or
+            other payment credentials,
+          </li>
+          <li>
+            user preferences, product interests, communication choices, and
+            other customer profile information, and
+          </li>
+          <li>
+            your resume or CV, references and background check information.
+          </li>
+        </ul>
+        <h4><strong>Information collected automatically</strong></h4>
+        <p>
+          We use cookies and anonymous identifiers to collect certain types of
+          information about your use of our Services such as:
+        </p>
+        <ul>
+          <li>Internet Protocol Address,</li>
+          <li>Browser type,</li>
+          <li>Browser language,</li>
+          <li>Operating system (of computer and mobile devices),</li>
+          <li>User preferences,</li>
+          <li>Screen resolution,</li>
+          <li>Application identifiers,</li>
+          <li>Traffic identifiers,</li>
+          <li>Device type, identifiers or capabilities,</li>
+          <li>Session ID or User ID,</li>
+          <li>Date and time,</li>
+          <li>Location of purchases made in connection with an offer,</li>
+          <li>URL and content of pages visited or requested,</li>
+          <li>
+            Other browsing behavior, such as products and white papers
+            downloaded,
+          </li>
+          <li>Domains, and</li>
+          <li>ISPs.</li>
+        </ul>
+        <p>
+          We may use location detection technology to determine your approximate
+          location, nearby Wi-Fi access points, and cell towers.
+        </p>
+        <p>
+          When you use our Services we may automatically collect and store
+          certain information in activity logs such as:
+        </p>
+        <ul>
+          <li>
+            Details of how you used our Services, such as your search queries,
+          </li>
+          <li>Internet protocol address,</li>
+          <li>Content on the website viewed by you, and</li>
+          <li>Page views within our Services.</li>
+        </ul>
+        <p>
+          Many internet browsers allow users to send a “Do Not Track” signal to
+          websites they visit. Currently, there is no consensus on the meaning
+          of “Do Not Track” or similar signals, and the Services have no
+          mechanism to respond to such a signal.
+        </p>
+        <h2><strong>How We Use Information We Collect</strong></h2>
+        <p>
+          We use information we collect to conduct our business and improve our
+          Services, develop new products and services, provide information and
+          support for Services, better understand your needs and interests,
+          personalize communications and advertising, and generally promote a
+          quality experience for users of the Services. In addition, we use
+          information for the purposes for which you have consented. For
+          example, we may use your information to:
+        </p>
+        <ul>
+          <li>Communicate, interact and build our relationship with you,</li>
+          <li>
+            Customize the content, products, and services that are offered to
+            you,
+          </li>
+          <li>Contact you with information about Drud and third parties,</li>
+          <li>
+            Process, fulfill, and follow up on transactions and requests for
+            products, services, support, and information,
+          </li>
+          <li>
+            Create and maintain your Drud account and record your actions and
+            transactions,
+          </li>
+          <li>Engage in market research and analysis,</li>
+          <li>
+            Measure, analyze and improve our products and services, the
+            effectiveness of our Services, and our advertising and marketing,
+          </li>
+          <li>
+            Monitor aggregate site usage metrics such as total number of
+            visitors and pages viewed;
+          </li>
+          <li>Consider your employment application,</li>
+          <li>Comply with legal requirements,</li>
+          <li>Enforce our agreements, or</li>
+          <li>
+            Deter, detect, and prevent fraud and other prohibited or illegal
+            activities.
+          </li>
+        </ul>
+        <p>
+          We also may use your information as may be described in a notice to
+          you at the time the information is collected, or in any other manner
+          to which you consent. We also use your information for our legitimate
+          interests. For example, if you provide us with your business card, we
+          will use the information on your card to communicate with you about
+          Drud.
+        </p>
+        <p>
+          Currently, we use Google Analytics to collect and process certain
+          analytics data, although we may change analytics providers in the
+          future. Google provides additional privacy options described at <a
+            href="http://www.google.com/policies/privacy/partners/"
+            >www.google.com/policies/privacy/partners/</a
+          >.
+        </p>
+        <p>
+          We may link information we collect from multiple sources to provide
+          better service to you and to improve the Services.
+        </p>
+        <h2><strong>How We Share and Disclose Information</strong></h2>
+        <p>We may share or disclose your information as follows:</p>
+        <ul>
+          <li>
+            To corporate affiliates including any corporate entity controlling,
+            controlled by, or under common control with us,
+          </li>
+          <li>
+            To our business partners, advertising partners, agents, service
+            providers, and suppliers who are using your information on our
+            behalf and/or in connection with an actual or potential transaction,
+          </li>
+          <li>
+            Based on a good faith belief that such disclosure is necessary to
+            protect the rights or safety of any person or entity,
+          </li>
+          <li>
+            Based on a good-faith belief that disclosure is necessary to respond
+            to judicial process, valid government inquiry, or is otherwise
+            required by law,
+          </li>
+          <li>
+            To an acquiring entity in the event that Drud or any of its assets
+            are acquired or to a surviving entity in the event that Drud or any
+            of its assets are involved in a merger,
+          </li>
+          <li>
+            When posted by you or an authorized third party to our wikis,
+            forums, blogs, message boards, chat rooms and other social
+            networking environments, and
+          </li>
+          <li>
+            To other third parties for purposes to which you have allowed or
+            consented.
+          </li>
+        </ul>
+        <p>
+          We do not sell, transfer or disclose your personal information to any
+          third parties other than for the limited purposes described in this
+          policy.
+        </p>
+        <p>
+          We will only share your PII with third parties if we determine in our
+          good faith judgment that those third parties provide an adequate level
+          of data protection to help ensure the security of your personal data,
+          such as by agreeing to abide by data protection regulations or the
+          terms of a contractual confidentiality commitment.
+        </p>
+        <h2><strong>International Users</strong></h2>
+        <p>
+          The Services are hosted in the United States and is intended for
+          visitors located within the United States. If you choose to access or
+          use the Services from the European Union or other regions of the world
+          with laws governing data collection and use that may differ from U.S.
+          law, please note that you are transferring your personal information
+          outside of those regions to the United States for storage and
+          processing. Also, we may transfer your data from the U.S. to other
+          countries or regions in connection with storage and processing of
+          data, fulfilling your requests, and operating the Services. By
+          providing any information, including personal information, on or to
+          the Service, you consent to such transfer, storage, and processing.
+        </p>
+        <p>
+          We offer European Union Model Clauses, also known as Standard
+          Contractual Clauses, to meet the adequacy and security requirements
+          for our customers that operate in the European Union, and other
+          international transfers of Customer Data. To request a copy of our
+          data processing addendum incorporating the Standard Contractual
+          Clauses, please contact us at <a href="mailto:privacy@ddev.com"
+            >privacy@ddev.com</a
+          >.
+        </p>
+        <p>
+          You can choose whether or not to provide your PII to us. If you choose
+          not to provide PII, you can continue to interact with Drud, but you
+          may be not be able to take advantage of certain offers, options,
+          events and services that depend upon Drud having access to accurate
+          PII.
+        </p>
+        <p>
+          Please note that while Drud offers you some control over what
+          marketing communication you will receive, certain transactional,
+          relationship, and legally required communications will not be affected
+          by the choices you have made about marketing communications.
+        </p>
+        <h2><strong>Security</strong></h2>
+        <p>
+          We take reasonable precautions including administrative, technical,
+          and physical safeguards to protect the PII we have collected from
+          loss, misuse, and unauthorized access, disclosure, alteration and
+          destruction. In addition, we use standard security protocols and
+          mechanisms to transmit sensitive data such as passwords and other
+          personal information. These safeguards are designed to protect
+          against, but are not a guarantee against, the loss, misuse and
+          unauthorized access, disclosure, alteration, and destruction of your
+          information. We keep your job inquiries and job applications
+          confidential.
+        </p>
+        <h2><strong>Access and Accuracy</strong></h2>
+        <p>
+          We aim to maintain the accuracy of your contact information and
+          personal data. If you need to update or correct this please do so by
+          contacting us at the address, number, or email listed at the beginning
+          of this Policy.
+        </p>
+        <p>
+          Upon request, we will provide you with access to your personal
+          information and the ability to correct, amend, or delete that
+          information where it is inaccurate. We will make reasonable efforts to
+          provide the requested information or incorporate the requested changes
+          as soon as possible.
+        </p>
+        <p>
+          Before we provide access to any personal data or make any changes to
+          it we may ask you to verify your identity or provide other details to
+          help us respond to your request. We may keep a copy of information for
+          our records. Access may not be granted where the burden or expense of
+          providing access would be disproportionate to your individual privacy
+          risks or where the rights of others would be violated.
+        </p>
+        <h2><strong>Children’s Privacy</strong></h2>
+        <p>
+          Use of our Services is only available to individuals who are of legal
+          age to contract in their applicable jurisdiction. The Services are not
+          directed to children under 13 years of age. If that policy changes, we
+          will obtain consent from a parent or guardian before we knowingly
+          collect data from anyone under the age of 13.
+        </p>
+        <h2><strong>Third Party Links</strong></h2>
+        <p>
+          The Services may contain features or links to websites and services
+          provided by third parties. Any information you provide on third-party
+          sites or services is provided directly to the operators of such
+          services and is subject to those operators&rsquo; policies, if any,
+          governing privacy, and security, even if accessed through the
+          Services. We are not responsible for the content or privacy and
+          security practices and policies of third-party sites or services to
+          which links or access are provided through the Services. We encourage
+          you to learn about third parties&rsquo; privacy and security policies
+          before providing them with information.
+        </p>
+        <h2><strong>Changes to this Policy</strong></h2>
+        <p>
+          Please note that this Policy may change from time to time. We will
+          post any Policy changes on this page and, if the changes are
+          significant or reduce your rights in any material manner, we will
+          provide a more prominent notice. We will also keep prior versions of
+          this Policy in an archive for your review.
+        </p>
+        <p><strong><em>Version 2..0 &ndash; May 2018</em></strong></p>
+      </div>
+    </PostBody>
+  </main>
 </Layout>
