--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,12 +1,16 @@
 ---
 import Header from "../components/Header.astro"
 import Footer from "../components/Footer.astro"
+import { AstroSeo } from "@astrolib/seo"
+import { SITE_TITLE, SITE_DESCRIPTION } from "../config"
 
 export interface Props {
   title: string
+  description?: string
 }
 
-const { title } = Astro.props
+const { title, description = SITE_DESCRIPTION } = Astro.props
+const canonicalUrl = Astro.url.toString()
 
 import "../styles/global.css"
 ---
@@ -18,7 +22,18 @@ import "../styles/global.css"
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
-    <title>{title}</title>
+    <AstroSeo
+      title={title}
+      description={description}
+      canonical={canonicalUrl}
+      openGraph={{
+        url: canonicalUrl,
+        title: title,
+        description: description,
+        site_name: SITE_TITLE,
+        images: [],
+      }}
+    />
   </head>
   <body>
     <Header />
