Add Plausible snippet.

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -34,6 +34,7 @@ import "../styles/global.css"
         images: [],
       }}
     />
+    <script defer data-domain="ddev.com" src="https://plausible.io/js/script.js"></script>
   </head>
   <body>
     <Header />
